# jawas

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  idl.json  kamino_raw-today.jsonl  wallet.toml
Specification/: Jawas-Watch-Not lifebit.csv  Phase2-Specification.md  kamino_raw-today.jsonl  liquidation_bot_spec.md  phase2_liquidation_workflow.md
src/: lib.rs  main.rs  utils.rs
src/adapters/: airtable.rs  helius.rs  jito.rs  jupiter.rs  mod.rs  oracle.rs
src/domain/: kamino.rs  mod.rs  opportunity.rs  position.rs  profit.rs  solend.rs  token.rs
src/ports/: config.rs  jito.rs  jupiter.rs  logger.rs  mod.rs  oracle.rs  rpc.rs
src/services/: heartbeat.rs  hunter.rs  hunter.rs.bak_refonte  mod.rs  monitor.rs  observer.rs
tools/: generate_weekly_token_report.rs  inspect_kamino_obligation.rs  inspect_solend_obligation.rs  kamino_history.py  liquidate_one.rs
