[package]
name = "jawas"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jawas"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
solana-client = "2"
solana-sdk  = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dotenv      = "0.15"
reqwest     = { version = "0.12", features = ["json"] }
anyhow            = "1"
borsh             = "1"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util      = "0.3"
