[package]
name = "jawas"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jawas"
path = "src/main.rs"

[[bin]]
name = "liquidate_one"
path = "tools/liquidate_one.rs"

[[bin]]
name = "inspect_kamino_obligation"
path = "tools/inspect_kamino_obligation.rs"

[[bin]]
name = "inspect_solend_obligation"
path = "tools/inspect_solend_obligation.rs"

[[bin]]
name = "generate_weekly_token_report"
path = "tools/generate_weekly_token_report.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
solana-client = "2"
solana-sdk  = "2"
solana-rpc-client-types = "2"
solana-account-decoder-client-types = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dotenv      = "0.15"
reqwest     = { version = "0.12", features = ["json", "stream"] }
anyhow            = "1"
async-trait       = "0.1"
borsh             = "1"
bs58              = "0.5"
bincode           = "1"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util      = "0.3"
sha2              = "0.10"
base64            = "0.22"
dashmap           = "6"
